Fix first title white space

--- a/src/components/Main/index.module.css
+++ b/src/components/Main/index.module.css
@@ -5,7 +5,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-top: 5rem;
 }
 
 .title {
